src/test/run-pass/nil-decl-in-foreign.rs
// Issue #901
#[nolink]
extern module libc {
    fn printf(x: ());
}
fn main() { }